vpc/vpc-subnet-natgateway.cf.yml
---
AWSTemplateFormatVersion: 2010-09-09
Description:
  Create Vpc, Subnet and NatGateway

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Parameters:
          - SystemName
          - Env
          - VpcCidr
          - NumberOfNatGateway
          - UseEgressOnlyInternetGateway

Parameters:
  SystemName:
    Description: System identifier
    Type: String
    MinLength: 1
    Default: example
  Env:
    Description: Environment name. e.g. prod, stg, dev
    Type: String
    MinLength: 1
    Default: prod
  VpcCidr:
    Description: First and Second Octet of VPC. e.g. 10.0, 172.16, 192.168
    Type: String
    Default: '10.0'
    AllowedPattern: "^(10\\.([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])|172\\.(1[6-9]|2[0-9]|3[0-1])|192\\.168)$"
    ConstraintDescription: xxx.xxx
  NumberOfNatGateway:
    Description: Number of NatGateway
    Type: Number
    Default: 0
    AllowedValues: [0, 1, 2, 3]
  UseEgressOnlyInternetGateway:
    Description: Use egress-only internet gateway. No|Yes
    Type: String
    Default: 'No'
    AllowedValues: ['No', 'Yes']

Conditions:
  UseOneNatGateway:
    !Equals [1, !Ref NumberOfNatGateway]
  UseTwoNatGateways:
    !Equals [2, !Ref NumberOfNatGateway]
  UseThreeNatGateways:
    !Equals [3, !Ref NumberOfNatGateway]
  UseEgressOnlyInternetGateway:
    !Equals ['Yes', !Ref UseEgressOnlyInternetGateway]

Mappings:
  CidrConfig:
    Key:
      Vpc: .0.0/16
      PublicSubnet1: .0.0/24
      PublicSubnet2: .1.0/24
      PublicSubnet3: .2.0/24
      ApplicationSubnet1: .10.0/24
      ApplicationSubnet2: .11.0/24
      ApplicationSubnet3: .12.0/24
      DataStoreSubnet1: .20.0/24
      DataStoreSubnet2: .21.0/24
      DataStoreSubnet3: .22.0/24


Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Sub ["${VpcCidr}${Subnet}", {Subnet: !FindInMap [CidrConfig, Key, Vpc]}]
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-vpc
        - Key: SystemName
          Value: !Sub ${SystemName}
        - Key: Env
          Value: !Sub ${Env}
  VpcCiderBlockIPv6:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: true
      VpcId: !Ref Vpc


  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-igw
        - Key: SystemName
          Value: !Sub ${SystemName}
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc


  NetworkACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-nacl
        - Key: SystemName
          Value: !Sub ${SystemName}
      VpcId: !Ref Vpc
  NetworkACLEntryEgress:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: true
      NetworkAclId: !Ref NetworkACL
      Protocol: -1
      RuleAction: allow
      RuleNumber: 100
  NetworkACLEntryIngress:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: false
      NetworkAclId: !Ref NetworkACL
      Protocol: -1
      RuleAction: allow
      RuleNumber: 100


  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-public-rtb
        - Key: SystemName
          Value: !Sub ${SystemName}
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1:
    DependsOn: VpcCiderBlockIPv6
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, "Fn::GetAZs": {Ref: "AWS::Region"}]
      CidrBlock: !Sub ["${VpcCidr}${Subnet}", {Subnet: !FindInMap [CidrConfig, Key, PublicSubnet1]}]
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - VpcPart: !Select [0, !Split ['00::/56', !Select [0, !GetAtt Vpc.Ipv6CidrBlocks]]]
            SubnetPart: '00::/64'
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-public-subnet-1
        - Key: SystemName
          Value: !Sub ${SystemName}
      VpcId: !Ref Vpc
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable
  PublicSubnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      NetworkAclId: !Ref NetworkACL

  PublicSubnet2:
    DependsOn: VpcCiderBlockIPv6
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [1, "Fn::GetAZs": {Ref: "AWS::Region"}]
      CidrBlock: !Sub ["${VpcCidr}${Subnet}", {Subnet: !FindInMap [CidrConfig, Key, PublicSubnet2]}]
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - VpcPart: !Select [0, !Split ['00::/56', !Select [0, !GetAtt Vpc.Ipv6CidrBlocks]]]
            SubnetPart: '01::/64'
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-public-subnet-2
        - Key: SystemName
          Value: !Sub ${SystemName}
      VpcId: !Ref Vpc
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable
  PublicSubnet2NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      NetworkAclId: !Ref NetworkACL

  PublicSubnet3:
    DependsOn: VpcCiderBlockIPv6
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [2, "Fn::GetAZs": {Ref: "AWS::Region"}]
      CidrBlock: !Sub ["${VpcCidr}${Subnet}", {Subnet: !FindInMap [CidrConfig, Key, PublicSubnet3]}]
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - VpcPart: !Select [0, !Split ['00::/56', !Select [0, !GetAtt Vpc.Ipv6CidrBlocks]]]
            SubnetPart: '02::/64'
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-public-subnet-3
        - Key: SystemName
          Value: !Sub ${SystemName}
      VpcId: !Ref Vpc
  PublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet3
      RouteTableId: !Ref PublicRouteTable
  PublicSubnet3NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet3
      NetworkAclId: !Ref NetworkACL


  ApplicationRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-application-rtb-1
        - Key: SystemName
          Value: !Sub ${SystemName}
  ApplicationRoute11:
    Type: AWS::EC2::Route
    Condition: UseOneNatGateway
    Properties:
      RouteTableId: !Ref ApplicationRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
  ApplicationRoute12:
    Type: AWS::EC2::Route
    Condition: UseTwoNatGateways
    Properties:
      RouteTableId: !Ref ApplicationRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway21
  ApplicationRoute13:
    Type: AWS::EC2::Route
    Condition: UseThreeNatGateways
    Properties:
      RouteTableId: !Ref ApplicationRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway31
  ApplicationRoute1:
    Type: AWS::EC2::Route
    Condition: UseEgressOnlyInternetGateway
    Properties:
      RouteTableId: !Ref ApplicationRouteTable1
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId: !Ref EgressOnlyInternetGateway

  ApplicationSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, "Fn::GetAZs": {Ref: "AWS::Region"}]
      CidrBlock: !Sub ["${VpcCidr}${Subnet}", {Subnet: !FindInMap [CidrConfig, Key, ApplicationSubnet1]}]
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-application-subnet-1
        - Key: SystemName
          Value: !Sub ${SystemName}
      VpcId: !Ref Vpc
  ApplicationSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ApplicationSubnet1
      RouteTableId: !Ref ApplicationRouteTable1
  ApplicationSubnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref ApplicationSubnet1
      NetworkAclId: !Ref NetworkACL

  ApplicationRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-application-rtb-2
        - Key: SystemName
          Value: !Sub ${SystemName}
  ApplicationRoute21:
    Type: AWS::EC2::Route
    Condition: UseOneNatGateway
    Properties:
      RouteTableId: !Ref ApplicationRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
  ApplicationRoute22:
    Type: AWS::EC2::Route
    Condition: UseTwoNatGateways
    Properties:
      RouteTableId: !Ref ApplicationRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway22
  ApplicationRoute23:
    Type: AWS::EC2::Route
    Condition: UseThreeNatGateways
    Properties:
      RouteTableId: !Ref ApplicationRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway32
  ApplicationRoute2:
    Type: AWS::EC2::Route
    Condition: UseEgressOnlyInternetGateway
    Properties:
      RouteTableId: !Ref ApplicationRouteTable2
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId: !Ref EgressOnlyInternetGateway

  ApplicationSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, "Fn::GetAZs": {Ref: "AWS::Region"}]
      CidrBlock: !Sub ["${VpcCidr}${Subnet}", {Subnet: !FindInMap [CidrConfig, Key, ApplicationSubnet2]}]
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-application-subnet-2
        - Key: SystemName
          Value: !Sub ${SystemName}
      VpcId: !Ref Vpc
  ApplicationSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ApplicationSubnet2
      RouteTableId: !Ref ApplicationRouteTable2
  ApplicationSubnet2NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref ApplicationSubnet2
      NetworkAclId: !Ref NetworkACL

  ApplicationRouteTable3:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-application-rtb-3
        - Key: SystemName
          Value: !Sub ${SystemName}
  ApplicationRoute31:
    Type: AWS::EC2::Route
    Condition: UseOneNatGateway
    Properties:
      RouteTableId: !Ref ApplicationRouteTable3
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
  ApplicationRoute32:
    Type: AWS::EC2::Route
    Condition: UseTwoNatGateways
    Properties:
      RouteTableId: !Ref ApplicationRouteTable3
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway21
  ApplicationRoute33:
    Type: AWS::EC2::Route
    Condition: UseThreeNatGateways
    Properties:
      RouteTableId: !Ref ApplicationRouteTable3
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway33
  ApplicationRoute3:
    Type: AWS::EC2::Route
    Condition: UseEgressOnlyInternetGateway
    Properties:
      RouteTableId: !Ref ApplicationRouteTable3
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId: !Ref EgressOnlyInternetGateway

  ApplicationSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [2, "Fn::GetAZs": {Ref: "AWS::Region"}]
      CidrBlock: !Sub ["${VpcCidr}${Subnet}", {Subnet: !FindInMap [CidrConfig, Key, ApplicationSubnet3]}]
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-application-subnet-3
        - Key: SystemName
          Value: !Sub ${SystemName}
      VpcId: !Ref Vpc
  ApplicationSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ApplicationSubnet3
      RouteTableId: !Ref ApplicationRouteTable3
  ApplicationSubnet3NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref ApplicationSubnet3
      NetworkAclId: !Ref NetworkACL


  DataStoreRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-datastore-rtb
        - Key: SystemName
          Value: !Sub ${SystemName}

  DataStoreSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, "Fn::GetAZs": {Ref: "AWS::Region"}]
      CidrBlock: !Sub ["${VpcCidr}${Subnet}", {Subnet: !FindInMap [CidrConfig, Key, DataStoreSubnet1]}]
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-datastore-subnet-1
        - Key: SystemName
          Value: !Sub ${SystemName}
      VpcId: !Ref Vpc
  DataStoreSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DataStoreSubnet1
      RouteTableId: !Ref DataStoreRouteTable
  DataStoreSubnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref DataStoreSubnet1
      NetworkAclId: !Ref NetworkACL

  DataStoreSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, "Fn::GetAZs": {Ref: "AWS::Region"}]
      CidrBlock: !Sub ["${VpcCidr}${Subnet}", {Subnet: !FindInMap [CidrConfig, Key, DataStoreSubnet2]}]
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-datastore-subnet-2
        - Key: SystemName
          Value: !Sub ${SystemName}
      VpcId: !Ref Vpc
  DataStoreSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DataStoreSubnet2
      RouteTableId: !Ref DataStoreRouteTable
  DataStoreSubnet2NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref DataStoreSubnet2
      NetworkAclId: !Ref NetworkACL

  DataStoreSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [2, "Fn::GetAZs": {Ref: "AWS::Region"}]
      CidrBlock: !Sub ["${VpcCidr}${Subnet}", {Subnet: !FindInMap [CidrConfig, Key, DataStoreSubnet3]}]
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-datastore-subnet-3
        - Key: SystemName
          Value: !Sub ${SystemName}
      VpcId: !Ref Vpc
  DataStoreSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DataStoreSubnet3
      RouteTableId: !Ref DataStoreRouteTable
  DataStoreSubnet3NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref DataStoreSubnet3
      NetworkAclId: !Ref NetworkACL


  # UseOneNatGateway
  NatGateway1:
    Type: AWS::EC2::NatGateway
    Condition: UseOneNatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP1.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-ngw-1
        - Key: SystemName
          Value: !Sub ${SystemName}
  NatGatewayEIP1:
    Type: AWS::EC2::EIP
    Condition: UseOneNatGateway
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-ngw-eip-1
        - Key: SystemName
          Value: !Sub ${SystemName}


  # UseTwoNatGateways
  NatGateway21:
    Type: AWS::EC2::NatGateway
    Condition: UseTwoNatGateways
    Properties:
      AllocationId: !GetAtt NatGatewayEIP21.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-ngw-1
        - Key: SystemName
          Value: !Sub ${SystemName}
  NatGatewayEIP21:
    Type: AWS::EC2::EIP
    Condition: UseTwoNatGateways
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-ngw-eip-1
        - Key: SystemName
          Value: !Sub ${SystemName}

  NatGateway22:
    Type: AWS::EC2::NatGateway
    Condition: UseTwoNatGateways
    Properties:
      AllocationId: !GetAtt NatGatewayEIP22.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-ngw-2
        - Key: SystemName
          Value: !Sub ${SystemName}
  NatGatewayEIP22:
    Type: AWS::EC2::EIP
    Condition: UseTwoNatGateways
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-ngw-eip-2
        - Key: SystemName
          Value: !Sub ${SystemName}


  # UseThreeNatGateways
  NatGateway31:
    Type: AWS::EC2::NatGateway
    Condition: UseThreeNatGateways
    Properties:
      AllocationId: !GetAtt NatGatewayEIP31.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-ngw-1
        - Key: SystemName
          Value: !Sub ${SystemName}
  NatGatewayEIP31:
    Type: AWS::EC2::EIP
    Condition: UseThreeNatGateways
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-ngw-eip-1
        - Key: SystemName
          Value: !Sub ${SystemName}

  NatGateway32:
    Type: AWS::EC2::NatGateway
    Condition: UseThreeNatGateways
    Properties:
      AllocationId: !GetAtt NatGatewayEIP32.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-ngw-2
        - Key: SystemName
          Value: !Sub ${SystemName}
  NatGatewayEIP32:
    Type: AWS::EC2::EIP
    Condition: UseThreeNatGateways
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-ngw-eip-2
        - Key: SystemName
          Value: !Sub ${SystemName}

  NatGateway33:
    Type: AWS::EC2::NatGateway
    Condition: UseThreeNatGateways
    Properties:
      AllocationId: !GetAtt NatGatewayEIP33.AllocationId
      SubnetId: !Ref PublicSubnet3
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-ngw-3
        - Key: SystemName
          Value: !Sub ${SystemName}
  NatGatewayEIP33:
    Type: AWS::EC2::EIP
    Condition: UseThreeNatGateways
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${Env}-ngw-eip-3
        - Key: SystemName
          Value: !Sub ${SystemName}

  EgressOnlyInternetGateway:
    Type: AWS::EC2::EgressOnlyInternetGateway
    Condition: UseEgressOnlyInternetGateway
    Properties:
      VpcId: !Ref Vpc


Outputs:
  Vpc:
    Value: !Ref Vpc
    Export:
      Name: !Sub ${SystemName}-${Env}-vpc

  PublicSubnet1:
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${SystemName}-${Env}-public-subnet-1
  PublicSubnet2:
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub ${SystemName}-${Env}-public-subnet-2
  PublicSubnet3:
    Value: !Ref PublicSubnet3
    Export:
      Name: !Sub ${SystemName}-${Env}-public-subnet-3

  ApplicationSubnet1:
    Value: !Ref ApplicationSubnet1
    Export:
      Name: !Sub ${SystemName}-${Env}-application-subnet-1
  ApplicationSubnet2:
    Value: !Ref ApplicationSubnet2
    Export:
      Name: !Sub ${SystemName}-${Env}-application-subnet-2
  ApplicationSubnet3:
    Value: !Ref ApplicationSubnet3
    Export:
      Name: !Sub ${SystemName}-${Env}-application-subnet-3

  DataStoreSubnet1:
    Value: !Ref DataStoreSubnet1
    Export:
      Name: !Sub ${SystemName}-${Env}-datastore-subnet-1
  DataStoreSubnet2:
    Value: !Ref DataStoreSubnet2
    Export:
      Name: !Sub ${SystemName}-${Env}-datastore-subnet-2
  DataStoreSubnet3:
    Value: !Ref DataStoreSubnet3
    Export:
      Name: !Sub ${SystemName}-${Env}-datastore-subnet-3

  PublicRouteTable:
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub ${SystemName}-${Env}-public-rtb
  ApplicationRouteTable1:
    Value: !Ref ApplicationRouteTable1
    Export:
      Name: !Sub ${SystemName}-${Env}-application-rtb-1
  ApplicationRouteTable2:
    Value: !Ref ApplicationRouteTable2
    Export:
      Name: !Sub ${SystemName}-${Env}-application-rtb-2
  ApplicationRouteTable3:
    Value: !Ref ApplicationRouteTable3
    Export:
      Name: !Sub ${SystemName}-${Env}-application-rtb-3
  DataStoreRouteTable:
    Value: !Ref DataStoreRouteTable
    Export:
      Name: !Sub ${SystemName}-${Env}-datastore-rtb
